@@ -18,6 +18,11 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Added new configure check, CheckProg, to check for
       existence of a program.
 
+  From Andrew Featherstone:
+    - Fix for issue #2840 - Fix for two environments specifying same target with different
+      actions not throwing hard error. Instead SCons was incorrectly issuing a warning
+      and continuing.
+
   From Florian Miedniak:
     - Fixed tigris issue #3011: Glob() excludes didn't work when used with VariantDir(duplicate=0)
 
